chore(config): fix database connection parameters and environment variables loading
Fix .env loading pattern. Support XAMPP MySQL blank passwords in DBConnection.